# Tracey

./: .flawfinder.conf  .gitignore  AUTHORS  ChangeLog  README
.forgejo/workflows/: mirror.yml  testing.yml
.github/: FUNDING.yml
.github/workflows/: aarch64-apple-darwin-clang.yml  aarch64-apple-darwin-gcc.yml  aarch64-linux-gnu-clang.yml  aarch64-linux-gnu-gcc.yml  aarch64-windows-clang.yml  aarch64-windows-gcc.yml  arm-linux-gnueabihf-clang.yml  arm-linux-gnueabihf-gcc.yml  clang_x86_32_testing.yml  clang_x86_64_testing.yml  codeql.yml  flawfinder.yml  gcc_x86_32_testing.yml  gcc_x86_64_testing.yml  i686-linux-gnu-clang.yml  i686-linux-gnu-gcc.yml  i686-windows-clang.tes  i686-windows-clang.yml  i686-windows-gcc.yml  x86_64-apple-darwin-clang.yml  x86_64-apple-darwin-gcc.yml  x86_64-freebsd-gnu-gcc.yml  x86_64-linux-gnu-clang.yml  x86_64-linux-gnu-gcc.yml  x86_64-windows-clang.yml  x86_64-windows-gcc.yml
.woodpecker/: testing.yml  testing_x86_64_clang.yml  testing_x86_64_gcc.yml
bootstrap/: CMakeLists.txt  GNUmakefile  GNUmakefile.am  configure.ac  index.c  index.cxx  index.trc
bootstrap/cmake/: config.h.in
bootstrap/general/argument/: argument.c  argument.cxx  constructor.cxx  debug_print_args.c  debug_print_args.cxx  debug_print_argument.cxx  get_input_file.cxx  get_output_file.cxx  get_warning_all.cxx  get_warning_extra.cxx  parse_argument.cxx
bootstrap/general/compile/: compiler_pipeline.c  compiler_pipeline.cxx
bootstrap/general/error/: normal_error.c  normal_error.cxx
bootstrap/general/file/: close.cxx  constructor.cxx  debug.cxx  debug_print_file.c  debug_print_file.cxx  destructor.cxx  file_close.c  file_close.cxx  file_open.c  file_open.cxx  move_assignment.cxx  move_constructor.cxx  open.cxx
bootstrap/include/: README
bootstrap/include/tracey/: lexer_struct.h
bootstrap/include/tracey/argument/: argument.h  argument.hxx
bootstrap/include/tracey/compile/: compile.h  compile.hxx
bootstrap/include/tracey/error/: error.hxx
bootstrap/include/tracey/file/: file.h  file.hxx
bootstrap/include/tracey/struct/: args_struct.hxx  file_struct.hxx
